fixing some spacing to look better

--- a/css/landing.css
+++ b/css/landing.css
@@ -49,16 +49,19 @@ a:hover {
 
 .message {
 	text-align: center;
+	font-size: 2vmin;
 }
 
 .message-block {
 	height: 25%;
+	padding-top: 3%;
 }
 
 .title-block {
 	height: 25%;
 	float-left;
 	margin-top: 5%;
+	margin-bottom: 5%;
 }
 
 .title-text {
@@ -84,12 +87,8 @@ a:hover {
 #launch {
 	background: url('images/coronado.jpg') no-repeat;
 	width: 100%;
-	height: 40%;
+	height: 60%;
 	background-size: 100% 100%;
-}
-
-#message {
-
 }
 
 
